--- a/Level and Assets - Albert/PRJ666Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Level and Assets - Albert/PRJ666Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -165,7 +165,7 @@ TimelineEnabledSnaps=MontageSection
 [ContentBrowser]
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
-ContentBrowserTab1.SourcesExpanded=False
+ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.329205
 ContentBrowserTab1.VerticalSplitter.SlotSize1=0.670795
@@ -209,15 +209,16 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Retry/Menus/UI
+ContentBrowserTab1.SelectedPaths=/Game/Game/Level/TestMaps
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+LastLevel=/Game/Game/Level/TestMaps/Room5
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Game/Level/TestMaps/Room5.Room5:PersistentLevel.Room5
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -2087,6 +2088,14 @@ NewGame_C.Navigation=True
 NewGame_C.Localization=True
 K2Node_SetFieldsInStruct.PinOptions=True
 BorderGunInstance_C.Default=True
+Room5_C.Tick=True
+Room5_C.Replication=True
+Room5_C.Actor=True
+Room5_C.Input=True
+Room3_C.Tick=True
+Room3_C.Replication=True
+Room3_C.Actor=True
+Room3_C.Input=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2231,26 +2240,26 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Retry/Menus/UI/EndLevelScreen
-MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem2=/Game/Cristian_Menus_Updated/Cristian_Menus/UI/PauseMenu
-MRUItem3=/Game/Cristian_Menus_Updated/Cristian_Menus/UI/Options
-MRUItem4=/Game/Game/AnimationBP_Character_BP/SwatMan
-MRUItem5=/Game/Save_Load/GameInstance_Structs/BorderGunInstance
-MRUItem6=/Game/Save_Load/LoadGameMenu/NewGame_LoadGame
-MRUItem7=/Game/Save_Load/LoadGameMenu/NewGame
-MRUItem8=/Game/Save_Load/GameInstance_Structs/PlayerStats_Struct
-MRUItem9=/Game/Save_Load/SaveGameInstance/SaveGame_BorderGun
-MRUItem10=/Game/Retry/Menus/UI/Dialogue
-MRUItem11=/Game/Retry/TestWeapons/Bullet_TEst
-MRUItem12=/Game/Retry/Enemies/Ranged/AIStuff/RangedEnemyBT
-MRUItem13=/Game/Retry/Enemies/Ranged/BP/RangedEnemy
-MRUItem14=/Game/Retry/Enemies/Ranged/AIStuff/RangedAi
-MRUItem15=/Game/Save_Load/GameInstance_Structs/SaveData_Struct
-MRUItem16=/Game/Save_Load/GameInstance_Structs/PlayerStats
-MRUItem17=/Game/Retry/Enemies/Melee/BP/MeleeEnemy
-MRUItem18=/Game/Retry/TestMaps/Level/Tutorial
-MRUItem19=/Game/Retry/TestMaps/MainMenuWorld
+MRUItem0=/Game/Game/Level/TestMaps/Room5
+MRUItem1=/Game/Game/Level/TestMaps/Room3
+MRUItem2=/Game/Retry/Menus/UI/EndLevelScreen
+MRUItem3=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem4=/Game/Cristian_Menus_Updated/Cristian_Menus/UI/PauseMenu
+MRUItem5=/Game/Cristian_Menus_Updated/Cristian_Menus/UI/Options
+MRUItem6=/Game/Game/AnimationBP_Character_BP/SwatMan
+MRUItem7=/Game/Save_Load/GameInstance_Structs/BorderGunInstance
+MRUItem8=/Game/Save_Load/LoadGameMenu/NewGame_LoadGame
+MRUItem9=/Game/Save_Load/LoadGameMenu/NewGame
+MRUItem10=/Game/Save_Load/GameInstance_Structs/PlayerStats_Struct
+MRUItem11=/Game/Save_Load/SaveGameInstance/SaveGame_BorderGun
+MRUItem12=/Game/Retry/Menus/UI/Dialogue
+MRUItem13=/Game/Retry/TestWeapons/Bullet_TEst
+MRUItem14=/Game/Retry/Enemies/Ranged/AIStuff/RangedEnemyBT
+MRUItem15=/Game/Retry/Enemies/Ranged/BP/RangedEnemy
+MRUItem16=/Game/Retry/Enemies/Ranged/AIStuff/RangedAi
+MRUItem17=/Game/Save_Load/GameInstance_Structs/SaveData_Struct
+MRUItem18=/Game/Save_Load/GameInstance_Structs/PlayerStats
+MRUItem19=/Game/Retry/Enemies/Melee/BP/MeleeEnemy
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
@@ -2560,7 +2569,7 @@ NodeTemplateCacheCapMB=20.000000
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
-Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.StrikeBrush.TintColor\" \"Object.Appearance.ShadowOffset\" \"Object.Appearance.ShadowColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransform.Shear\" \"Object.Render Transform.RenderTransformPivot\" "
+Object=
 InputSettings="\"Object.Bindings.AxisConfig\" \"Object.Bindings.ActionMappings.ActionMappings[34]\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
@@ -2738,7 +2747,7 @@ WindowSize=X=947.000 Y=938.000
 InitiallyMaximized=True
 
 [Directories2]
-UNR=../../../../Users/Stephen/Desktop/Final Project/BorderGun/BorderGun/Level and Assets - Albert/PRJ666Game/Content/ThirdPersonBP/Maps
+UNR=C:/Users/Albert/BulletHell/BorderGun/Level and Assets - Albert/PRJ666Game/Content/Game/Level/TestMaps
 BRUSH=../../../../Users/Stephen/Desktop/Final Project/Workstation/Content/
 FBX=../../../../Users/Stephen/Desktop/Final Project/Workstation/Content/
 FBXAnim=../../../../Users/Stephen/Desktop/Final Project/Workstation/Content/
@@ -3602,16 +3611,16 @@ DistCurveEditor.TimeStamp=2021.02.04-17.25.37
 DistCurveEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem1=/Game/Game/Level/TestMaps/Tutorial1
-MRUItem2=/Game/Retry/TestMaps/Level/Tutorial
-MRUItem3=/Game/Retry/TestMaps/MainMenuWorld
-MRUItem4=/Game/Game/Level/TestMaps/Tutorial
-MRUItem5=/Game/Game/Level/TestMaps/RoomTest2
-MRUItem6=/Game/Game/Level/TestMaps/RoomTest1
-MRUItem7=/Game/Game/Level/TestMaps/Room5
-MRUItem8=/Game/Game/Level/TestMaps/RoomTest4
-MRUItem9=/Game/Game/Level/TestMaps/Room3
+MRUItem0=/Game/Game/Level/TestMaps/Room5
+MRUItem1=/Game/Game/Level/TestMaps/Room3
+MRUItem2=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem3=/Game/Game/Level/TestMaps/Tutorial1
+MRUItem4=/Game/Retry/TestMaps/Level/Tutorial
+MRUItem5=/Game/Retry/TestMaps/MainMenuWorld
+MRUItem6=/Game/Game/Level/TestMaps/Tutorial
+MRUItem7=/Game/Game/Level/TestMaps/RoomTest2
+MRUItem8=/Game/Game/Level/TestMaps/RoomTest1
+MRUItem9=/Game/Game/Level/TestMaps/RoomTest4
 MRUItem10=/Game/Game/Level/TestMaps/Room1
 MRUItem11=/Game/Game/Level/TestMaps/tutorialtest1
 
@@ -3840,11 +3849,11 @@ UdpMessagingSettings=True
 WmfMediaSettings=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Retry/Enemies/Spawning_Platform/CombatDirector.CombatDirector;
 RecentlyPlaced=/Game/Retry/Enemies/Spawning_Platform/SpawningPlatform.SpawningPlatform;
 RecentlyPlaced=/Game/Retry/Pickups/AmmoPacket.AmmoPacket;
 RecentlyPlaced=/Game/Retry/Pickups/AmmoPacketSide.AmmoPacketSide;
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
-RecentlyPlaced=/Game/Retry/Enemies/Spawning_Platform/CombatDirector.CombatDirector;
 RecentlyPlaced=/Game/Retry/Pickups/HealthPacke.HealthPacke;
 RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
