Added New Models

--- a/Level and Assets - Albert/PRJ666Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Level and Assets - Albert/PRJ666Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -209,15 +209,16 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Retry/Menus/UI
+ContentBrowserTab1.SelectedPaths=/Game/Retry/Weapon/Textures
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+LastLevel=/Game/Game/Level/TestMaps/Tutorial1
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Retry/Weapon/Pistol/RussianRoulette.RussianRoulette
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -2115,8 +2116,8 @@ bBuildAdjacencyBuffer=True
 bBuildReversedIndexBuffer=True
 bGenerateLightmapUVs=True
 bOneConvexHullPerUCX=True
-bAutoGenerateCollision=False
-bCombineMeshes=False
+bAutoGenerateCollision=True
+bCombineMeshes=True
 bTransformVertexToAbsolute=True
 bBakePivotInVertex=False
 bImportMeshLODs=False
@@ -2199,7 +2200,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=FBXImport
 
 [PluginBrowser]
 InstalledPlugins=RigLogic
@@ -2231,26 +2232,26 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Retry/Menus/UI/EndLevelScreen
-MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem2=/Game/Cristian_Menus_Updated/Cristian_Menus/UI/PauseMenu
-MRUItem3=/Game/Cristian_Menus_Updated/Cristian_Menus/UI/Options
-MRUItem4=/Game/Game/AnimationBP_Character_BP/SwatMan
-MRUItem5=/Game/Save_Load/GameInstance_Structs/BorderGunInstance
+MRUItem0=/Game/Retry/Weapon/Pistol/RussianRoulette
+MRUItem1=/Game/Retry/Weapon/Textures/8k_earth_nightmap
+MRUItem2=/Game/Game/Swat2/swatMan
+MRUItem3=/Game/Game/AnimationBP_Character_BP/SwatMan
+MRUItem4=/Game/Retry/Weapon/Rifle/RayKay69
+MRUItem5=/Game/Retry/Weapon/Rifle/Material_004
 MRUItem6=/Game/Save_Load/LoadGameMenu/NewGame_LoadGame
-MRUItem7=/Game/Save_Load/LoadGameMenu/NewGame
-MRUItem8=/Game/Save_Load/GameInstance_Structs/PlayerStats_Struct
-MRUItem9=/Game/Save_Load/SaveGameInstance/SaveGame_BorderGun
-MRUItem10=/Game/Retry/Menus/UI/Dialogue
-MRUItem11=/Game/Retry/TestWeapons/Bullet_TEst
-MRUItem12=/Game/Retry/Enemies/Ranged/AIStuff/RangedEnemyBT
-MRUItem13=/Game/Retry/Enemies/Ranged/BP/RangedEnemy
-MRUItem14=/Game/Retry/Enemies/Ranged/AIStuff/RangedAi
-MRUItem15=/Game/Save_Load/GameInstance_Structs/SaveData_Struct
-MRUItem16=/Game/Save_Load/GameInstance_Structs/PlayerStats
-MRUItem17=/Game/Retry/Enemies/Melee/BP/MeleeEnemy
-MRUItem18=/Game/Retry/TestMaps/Level/Tutorial
-MRUItem19=/Game/Retry/TestMaps/MainMenuWorld
+MRUItem7=/Game/Retry/TestMaps/MainMenuWorld
+MRUItem8=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem9=/Game/Retry/Menus/UI/EndLevelScreen
+MRUItem10=/Game/Cristian_Menus_Updated/Cristian_Menus/UI/PauseMenu
+MRUItem11=/Game/Cristian_Menus_Updated/Cristian_Menus/UI/Options
+MRUItem12=/Game/Save_Load/GameInstance_Structs/BorderGunInstance
+MRUItem13=/Game/Save_Load/LoadGameMenu/NewGame
+MRUItem14=/Game/Save_Load/GameInstance_Structs/PlayerStats_Struct
+MRUItem15=/Game/Save_Load/SaveGameInstance/SaveGame_BorderGun
+MRUItem16=/Game/Retry/Menus/UI/Dialogue
+MRUItem17=/Game/Retry/TestWeapons/Bullet_TEst
+MRUItem18=/Game/Retry/Enemies/Ranged/AIStuff/RangedEnemyBT
+MRUItem19=/Game/Retry/Enemies/Ranged/BP/RangedEnemy
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
@@ -2520,6 +2521,11 @@ MRUItem19=/Game/Retry/TestMaps/MainMenuWorld
 /Game/Save_Load/LoadGameMenu/NewGame_LoadGame.NewGame_LoadGame=1
 /Game/Save_Load/SaveGameInstance/BorderGunSave.BorderGunSave=1
 /Game/Save_Load/LoadGameMenu/NewGame.NewGame=1
+/Game/Retry/Weapon/Rifle/RayKay69.RayKay69=1
+/Game/Retry/Weapon/Rifle/Material_004.Material_004=1
+/Game/Retry/Weapon/Pistol/RussianRoulette.RussianRoulette=1
+/Game/Game/Swat2/swatMan.swatMan=1
+/Game/Retry/Weapon/Textures/8k_earth_nightmap.8k_earth_nightmap=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2560,7 +2566,7 @@ NodeTemplateCacheCapMB=20.000000
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
-Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.StrikeBrush.TintColor\" \"Object.Appearance.ShadowOffset\" \"Object.Appearance.ShadowColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransform.Shear\" \"Object.Render Transform.RenderTransformPivot\" "
+Object=
 InputSettings="\"Object.Bindings.AxisConfig\" \"Object.Bindings.ActionMappings.ActionMappings[34]\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
@@ -2569,17 +2575,17 @@ CharacterMovementComponent="\"Object.Character Movement (Rotation Settings).Rota
 PawnMovementComponent="\"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.NavMovement.NavAgentProps\" "
 NavMovementComponent="\"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.NavMovement.NavAgentProps\" "
 MovementComponent=
-ActorComponent=
+ActorComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 WorldSettings="\"Object.World.NavigationSystemConfig\" \"Object.Lightmass.LightmassSettings\" \"Object.Broadphase.BroadphaseSettings\" \"Object.Audio.DefaultReverbSettings\" \"Object.Audio.DefaultAmbientZoneSettings\" \"Object.LODSystem.HierarchicalLODSetup\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0]\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].ProxySetting.MaterialSettings\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.MaterialSettings\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.OutputUVs\" "
 Info="\"Object.World.NavigationSystemConfig\" \"Object.Lightmass.LightmassSettings\" \"Object.Broadphase.BroadphaseSettings\" \"Object.Audio.DefaultReverbSettings\" \"Object.Audio.DefaultAmbientZoneSettings\" \"Object.LODSystem.HierarchicalLODSetup\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0]\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].ProxySetting.MaterialSettings\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.MaterialSettings\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.OutputUVs\" "
 SkeletalMeshComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[4]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SkinnedMeshComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[4]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 MeshComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Rendering.CustomPrimitiveData\" "
-SceneComponent=
-SwatMan_C="\"Object.Pause Menu Ref\" "
-Character="\"Object.Pause Menu Ref\" "
-Pawn="\"Object.Pause Menu Ref\" "
+PrimitiveComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SceneComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SwatMan_C=
+Character=
+Pawn=
 CapsuleComponent=
 ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Rendering.CustomPrimitiveData\" "
 Movement_C=
@@ -2620,8 +2626,8 @@ CombatDirector_C=
 Border="\"Object.Content.ContentColorAndOpacity\" \"Object.Appearance.Background\" \"Object.Appearance.BrushColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransform.Shear\" \"Object.Render Transform.RenderTransformPivot\" "
 ContentWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransform.Shear\" \"Object.Render Transform.RenderTransformPivot\" "
 PanelWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransform.Shear\" \"Object.Render Transform.RenderTransformPivot\" "
-Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.StrikeBrush.TintColor\" \"Object.Appearance.ShadowOffset\" \"Object.Appearance.ShadowColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransform.Shear\" \"Object.Render Transform.RenderTransformPivot\" "
-Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.StrikeBrush.TintColor\" \"Object.Appearance.ShadowOffset\" \"Object.Appearance.ShadowColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransform.Shear\" \"Object.Render Transform.RenderTransformPivot\" "
+Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransform.Shear\" \"Object.Render Transform.RenderTransformPivot\" "
+Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransform.Shear\" \"Object.Render Transform.RenderTransformPivot\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.StrikeBrush.TintColor\" \"Object.Appearance.ShadowOffset\" \"Object.Appearance.ShadowColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransform.Shear\" \"Object.Render Transform.RenderTransformPivot\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.StrikeBrush.TintColor\" \"Object.Appearance.ShadowOffset\" \"Object.Appearance.ShadowColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransform.Shear\" \"Object.Render Transform.RenderTransformPivot\" "
 DebugMeleeAi_C=
@@ -2738,11 +2744,11 @@ WindowSize=X=947.000 Y=938.000
 InitiallyMaximized=True
 
 [Directories2]
-UNR=../../../../Users/Stephen/Desktop/Final Project/BorderGun/BorderGun/Level and Assets - Albert/PRJ666Game/Content/ThirdPersonBP/Maps
+UNR=../../../../Users/Stephen/Desktop/Final Project/BorderGun/BorderGun/Level and Assets - Albert/PRJ666Game/Content/Retry/TestMaps
 BRUSH=../../../../Users/Stephen/Desktop/Final Project/Workstation/Content/
 FBX=../../../../Users/Stephen/Desktop/Final Project/Workstation/Content/
 FBXAnim=../../../../Users/Stephen/Desktop/Final Project/Workstation/Content/
-GenericImport=../../../../Users/Stephen/Desktop/Sounds/TremLoadingloopl.wav
+GenericImport=../../../../Users/Stephen/Desktop/Final Project/BorderGun/BorderGun/General Assets - Brendan/textures/8k_earth_nightmap.jpg
 GenericExport=D:/Unreal/MyProject2/Content
 GenericOpen=../../../../Users/Stephen/Desktop/Final Project/Workstation/Content/
 GenericSave=../../../../Users/Stephen/Desktop/Final Project/Workstation/Content/
@@ -3602,10 +3608,10 @@ DistCurveEditor.TimeStamp=2021.02.04-17.25.37
 DistCurveEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem1=/Game/Game/Level/TestMaps/Tutorial1
-MRUItem2=/Game/Retry/TestMaps/Level/Tutorial
-MRUItem3=/Game/Retry/TestMaps/MainMenuWorld
+MRUItem0=/Game/Retry/TestMaps/MainMenuWorld
+MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem2=/Game/Game/Level/TestMaps/Tutorial1
+MRUItem3=/Game/Retry/TestMaps/Level/Tutorial
 MRUItem4=/Game/Game/Level/TestMaps/Tutorial
 MRUItem5=/Game/Game/Level/TestMaps/RoomTest2
 MRUItem6=/Game/Game/Level/TestMaps/RoomTest1
@@ -3984,6 +3990,7 @@ CompressionQuality=75.000000
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [MaterialEditor]
 PrimType=1
