--- a/Level and Assets - Albert/PRJ666Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Level and Assets - Albert/PRJ666Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -214,11 +214,11 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/Game/Level/TestMaps/Room5
+LastLevel=/Game/Game/Level/TestMaps/RoomTest2
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Game/Level/TestMaps/Room5.Room5:PersistentLevel.Room5
+OpenAssetsAtExit=/Game/Game/Level/TestMaps/RoomTest2.RoomTest2:PersistentLevel.RoomTest2
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -2240,26 +2240,26 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Game/Level/TestMaps/Room5
-MRUItem1=/Game/Game/Level/TestMaps/Room3
-MRUItem2=/Game/Retry/Menus/UI/EndLevelScreen
-MRUItem3=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem4=/Game/Cristian_Menus_Updated/Cristian_Menus/UI/PauseMenu
-MRUItem5=/Game/Cristian_Menus_Updated/Cristian_Menus/UI/Options
-MRUItem6=/Game/Game/AnimationBP_Character_BP/SwatMan
-MRUItem7=/Game/Save_Load/GameInstance_Structs/BorderGunInstance
-MRUItem8=/Game/Save_Load/LoadGameMenu/NewGame_LoadGame
-MRUItem9=/Game/Save_Load/LoadGameMenu/NewGame
-MRUItem10=/Game/Save_Load/GameInstance_Structs/PlayerStats_Struct
-MRUItem11=/Game/Save_Load/SaveGameInstance/SaveGame_BorderGun
-MRUItem12=/Game/Retry/Menus/UI/Dialogue
-MRUItem13=/Game/Retry/TestWeapons/Bullet_TEst
-MRUItem14=/Game/Retry/Enemies/Ranged/AIStuff/RangedEnemyBT
-MRUItem15=/Game/Retry/Enemies/Ranged/BP/RangedEnemy
-MRUItem16=/Game/Retry/Enemies/Ranged/AIStuff/RangedAi
-MRUItem17=/Game/Save_Load/GameInstance_Structs/SaveData_Struct
-MRUItem18=/Game/Save_Load/GameInstance_Structs/PlayerStats
-MRUItem19=/Game/Retry/Enemies/Melee/BP/MeleeEnemy
+MRUItem0=/Game/Game/Level/TestMaps/RoomTest2
+MRUItem1=/Game/Game/Level/TestMaps/Room5
+MRUItem2=/Game/Game/Level/TestMaps/Room3
+MRUItem3=/Game/Retry/Menus/UI/EndLevelScreen
+MRUItem4=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem5=/Game/Cristian_Menus_Updated/Cristian_Menus/UI/PauseMenu
+MRUItem6=/Game/Cristian_Menus_Updated/Cristian_Menus/UI/Options
+MRUItem7=/Game/Game/AnimationBP_Character_BP/SwatMan
+MRUItem8=/Game/Save_Load/GameInstance_Structs/BorderGunInstance
+MRUItem9=/Game/Save_Load/LoadGameMenu/NewGame_LoadGame
+MRUItem10=/Game/Save_Load/LoadGameMenu/NewGame
+MRUItem11=/Game/Save_Load/GameInstance_Structs/PlayerStats_Struct
+MRUItem12=/Game/Save_Load/SaveGameInstance/SaveGame_BorderGun
+MRUItem13=/Game/Retry/Menus/UI/Dialogue
+MRUItem14=/Game/Retry/TestWeapons/Bullet_TEst
+MRUItem15=/Game/Retry/Enemies/Ranged/AIStuff/RangedEnemyBT
+MRUItem16=/Game/Retry/Enemies/Ranged/BP/RangedEnemy
+MRUItem17=/Game/Retry/Enemies/Ranged/AIStuff/RangedAi
+MRUItem18=/Game/Save_Load/GameInstance_Structs/SaveData_Struct
+MRUItem19=/Game/Save_Load/GameInstance_Structs/PlayerStats
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
@@ -3611,14 +3611,14 @@ DistCurveEditor.TimeStamp=2021.02.04-17.25.37
 DistCurveEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Game/Level/TestMaps/Room5
-MRUItem1=/Game/Game/Level/TestMaps/Room3
-MRUItem2=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem3=/Game/Game/Level/TestMaps/Tutorial1
-MRUItem4=/Game/Retry/TestMaps/Level/Tutorial
-MRUItem5=/Game/Retry/TestMaps/MainMenuWorld
-MRUItem6=/Game/Game/Level/TestMaps/Tutorial
-MRUItem7=/Game/Game/Level/TestMaps/RoomTest2
+MRUItem0=/Game/Game/Level/TestMaps/RoomTest2
+MRUItem1=/Game/Game/Level/TestMaps/Room5
+MRUItem2=/Game/Game/Level/TestMaps/Room3
+MRUItem3=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem4=/Game/Game/Level/TestMaps/Tutorial1
+MRUItem5=/Game/Retry/TestMaps/Level/Tutorial
+MRUItem6=/Game/Retry/TestMaps/MainMenuWorld
+MRUItem7=/Game/Game/Level/TestMaps/Tutorial
 MRUItem8=/Game/Game/Level/TestMaps/RoomTest1
 MRUItem9=/Game/Game/Level/TestMaps/RoomTest4
 MRUItem10=/Game/Game/Level/TestMaps/Room1
@@ -3704,7 +3704,7 @@ AimOffsetBlendSpace=AimOffsetBlendSpace.Axis Settings.Horizontal Axis,AimOffsetB
 WorldSettings=WorldSettings.Lightmass.Lightmaps,WorldSettings.GameMode.SelectedGameModeDetails,
 K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.None,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.AirDodgeForward,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings.Aim,InputSettings.Bindings.ActionMappings.Shoot,InputSettings.Bindings.ActionMappings.Roll,InputSettings.Bindings.ActionMappings.Main Weapon,InputSettings.Bindings.ActionMappings.Side Arm,InputSettings.Bindings.ActionMappings.Grenade,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.ActionMappings.AirDodgeLeft,InputSettings.Bindings.ActionMappings.AirDodgeRight,InputSettings.Bindings.ActionMappings.DoubleJump,InputSettings.Bindings.ActionMappings.AirDodgeBack,InputSettings.Bindings.ActionMappings.Reload,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.LOD,SkeletalMeshComponent.Rendering.TextureStreaming,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,CapsuleComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,
 SwatMan_C=
-SceneComponent=
+SceneComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.None,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.AirDodgeForward,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings.Aim,InputSettings.Bindings.ActionMappings.Shoot,InputSettings.Bindings.ActionMappings.Roll,InputSettings.Bindings.ActionMappings.Main Weapon,InputSettings.Bindings.ActionMappings.Side Arm,InputSettings.Bindings.ActionMappings.Grenade,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.ActionMappings.AirDodgeLeft,InputSettings.Bindings.ActionMappings.AirDodgeRight,InputSettings.Bindings.ActionMappings.DoubleJump,InputSettings.Bindings.ActionMappings.AirDodgeBack,InputSettings.Bindings.ActionMappings.Reload,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.LOD,SkeletalMeshComponent.Rendering.TextureStreaming,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,CapsuleComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,
 CharacterMovementComponent=
 MovementComponent=K2Node_VariableGet.DefaultValueCategory.None,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.AirDodgeForward,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings.Aim,InputSettings.Bindings.ActionMappings.Shoot,InputSettings.Bindings.ActionMappings.Roll,InputSettings.Bindings.ActionMappings.Main Weapon,InputSettings.Bindings.ActionMappings.Side Arm,InputSettings.Bindings.ActionMappings.Grenade,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.ActionMappings.AirDodgeLeft,InputSettings.Bindings.ActionMappings.AirDodgeRight,InputSettings.Bindings.ActionMappings.DoubleJump,InputSettings.Bindings.ActionMappings.AirDodgeBack,InputSettings.Bindings.ActionMappings.Reload,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.LOD,SkeletalMeshComponent.Rendering.TextureStreaming,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,CapsuleComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
@@ -3849,6 +3849,7 @@ UdpMessagingSettings=True
 WmfMediaSettings=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Game/Level/TestMaps/Red_Floor_Mat.Red_Floor_Mat;
 RecentlyPlaced=/Game/Retry/Enemies/Spawning_Platform/CombatDirector.CombatDirector;
 RecentlyPlaced=/Game/Retry/Enemies/Spawning_Platform/SpawningPlatform.SpawningPlatform;
 RecentlyPlaced=/Game/Retry/Pickups/AmmoPacket.AmmoPacket;
@@ -3868,7 +3869,6 @@ RecentlyPlaced=/Game/Retry/LevelProps/EndTunnel.EndTunnel;
 RecentlyPlaced=/Game/Game/AnimationBP_Character_BP/SwatMan.SwatMan;
 RecentlyPlaced=/Game/Retry/Enemies/Ranged/AIStuff/EQSTestPawn.EQSTestPawn;
 RecentlyPlaced=/Game/Retry/Enemies/Ranged/BP/RangedEnemy.RangedEnemy;
-RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 
 [/Script/UnrealEd.AnimationBlueprintEditorOptions]
 bHideUnrelatedNodes=False
