--- a/Level and Assets - Albert/PRJ666Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Level and Assets - Albert/PRJ666Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -209,7 +209,7 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Game/Level/TestMaps
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
@@ -217,7 +217,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 LastLevel=/Game/Game/Level/TestMaps/RoomTest4
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [DetailCategories]
 FbxImportUI.Mesh=True
