--- a/Level and Assets - Albert/PRJ666Game/Config/DefaultEngine.ini
+++ b/Level and Assets - Albert/PRJ666Game/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=PRJ666Game
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Game/Level/TestMaps/Tutorial1.Tutorial1
+EditorStartupMap=/Game/Retry/TestMaps/MainMenuWorld.MainMenuWorld
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -11,7 +11,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/Save_Load/GameInstance_Structs/BorderGunInstance.BorderGunInstance_C
-GameDefaultMap=/Game/Game/Level/TestMaps/Tutorial1.Tutorial1
+GameDefaultMap=/Game/Retry/TestMaps/MainMenuWorld.MainMenuWorld
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/ThirdPersonBP/Swat/SwatPlayer.SwatPlayer_C
 GlobalDefaultServerGameMode=None
